--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@caspay/sdk",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Official CasPay JavaScript/TypeScript SDK - Accept crypto payments with Casper blockchain",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "browser": "dist/caspay.min.js",
@@ -12,8 +13,9 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "npm run version:sync && rollup -c",
     "dev": "rollup -c -w",
+    "version:sync": "node scripts/update-version.js",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
@@ -43,11 +45,15 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "rollup": "^4.9.1",
-    "rollup-plugin-terser": "^7.0.2",
+    "@rollup/plugin-terser": "^0.4.4",
     "tslib": "^2.8.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "casper-js-sdk": "^5.0.5"
   }
 }
